# gy

./: CMakeLists.txt  LICENSE  README.md  gen_project.bat  gen_project.command  gen_project.sh  plist.in
gy/: gy.cpp  gy.h
gy/config/: config.h  config.h.in
gy/core/: application.cpp  application.h  application.inl  application_entrypoint.h  application_macos.cpp  application_macos.mm  application_win64.cpp  object.cpp  object.h  object_base.cpp  object_base.h
gy/pil/: platform.cpp  platform.h  string.cpp  string.h  type.h
test/: CMakeLists.txt
test/gy_test/: gy_test.cpp
